# intertext-graph

./: .gitignore  MANIFEST.in  NOTICE.txt  README.md  requirements.txt  setup.cfg
intertext_graph/: __init__.py  itgraph.py  itmultigraph.py  itsentsplitter.py
intertext_graph/parsers/: __init__.py  f1000_xml_parser.py  itparser.py  utils.py
intertext_graph/resources/: review_boilerplate.txt
tutorial/example_data/: 207_6-229_v1.xml  anarchism_wiki.json
tutorial/example_notebooks/: ITG.ipynb
visualization/: .gitignore  index.html  package.json  webpack.config.js
visualization/static/jsx/: App.js  Document.js  Form.js  Visual.js
visualization/static/scss/: custom.scss
