[metadata]
name = intertext-graph
version = 0.4
description = InterText Graph Library
author = Ubiquitous Knowledge Processing Lab
author_email = meichler@ukp.informatik.tu-darmstadt.de
url = https://github.com/UKPLab/intertext-graph

[options]
packages = find_namespace:
include_package_data = True
install_requires =
  lxml
  networkx
  pandas
  requests
  spacy
  tqdm
python_requires = >=3.9
